--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongodb": "^2.2.16",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
-    "passport-twitter": "^1.0.4"
+    "passport-twitter": "^1.0.4",
+    "url-valid": "^0.3.0"
   }
 }
