--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
+    "dotenv": "^8.2.0",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "express-force-https": "^1.0.0",
